Replace PNG images with WebP and update HTML/JS references

--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
             <p id="allowance-display"></p>
             <div class="area-list">
                 <div class="area-card">
-                    <img src="images/area_snack.png" alt="お菓子エリア">
+                    <img src="images/area_snack.webp" alt="お菓子エリア">
                     <button onclick="selectArea('お菓子')">🍭 お菓子</button>
                 </div>
                 <div class="area-card">
-                    <img src="images/area_toy.png" alt="おもちゃエリア">
+                    <img src="images/area_toy.webp" alt="おもちゃエリア">
                     <button onclick="selectArea('おもちゃ')">🧸 おもちゃ</button>
                 </div>
                 <div class="area-card">
-                    <img src="images/area_drink.png" alt="飲み物エリア">
+                    <img src="images/area_drink.webp" alt="飲み物エリア">
                     <button onclick="selectArea('飲み物')">🥤 飲み物</button>
                 </div>
                 <div class="area-card">
-                    <img src="images/area_book.png" alt="本エリア">
+                    <img src="images/area_book.webp" alt="本エリア">
                     <button onclick="selectArea('本')">📚 本</button>
                 </div>
             </div>
