Add Google Search Console verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-site-verification" content="cgBDJwZV7VLjpthtUUxRY_CXi6j8L3vBaPs5ZN9nEag" />
     <title>お買い物練習アプリ</title>
     <link rel="stylesheet" href="style.css">
 </head>
