Add SEO meta tags for search engine optimization

--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Google 検証用 -->
     <meta name="google-site-verification" content="cgBDJwZV7VLjpthtUUxRY_CXi6j8L3vBaPs5ZN9nEag" />
-    <title>お買い物練習アプリ</title>
+
+    <!-- SEO対策 -->
+    <title>お買い物練習アプリ - お小遣いの範囲で買い物を学ぼう！</title>
+    <meta name="description" content="特別支援が必要な子ども向けに作られた、無料で使える買い物練習シミュレーションアプリ。お小遣いの範囲で楽しく買い物を学べます。">
+    <meta name="keywords" content="お買い物練習, 特別支援, シミュレーション, お小遣い, 学習アプリ">
+
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 
 <body>
     <div id="app">
